add_boyle_test(math_chebyshev chebyshev_test.cpp)

add_boyle_test(math_vec2 vec2_test.cpp)

add_boyle_test(math_vec3 vec3_test.cpp)

add_boyle_test(math_cubic_interpolation cubic_interpolation_test.cpp)

add_boyle_test(math_quintic_interpolation quintic_interpolation_test.cpp)

add_subdirectory(sparse_matrix)
